--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-1.jpg"
+              src="./images/images.portfolio/img-1.jpg"
               alt="Пример Проекта"
               width="370"
             />
@@ -82,7 +82,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-2.jpg"
+              src="./images/images.portfolio/img-2.jpg"
               alt="Пример Проекта 2"
               width="370"
             />
@@ -91,7 +91,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-3.jpg"
+              src="./images/images.portfolio/img-3.jpg"
               alt="Пример Проекта 3"
               width="370"
             />
@@ -100,7 +100,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-4.jpg"
+              src="./images/images.portfolio/img-4.jpg"
               alt="Пример Проекта 4"
               width="370"
             />
@@ -109,7 +109,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-5.jpg"
+              src="./images/images.portfolio/img-5.jpg"
               alt="Пример Проекта 5"
               width="370"
             />
@@ -118,7 +118,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-6.jpg"
+              src="./images/images.portfolio/img-6.jpg"
               alt="Пример Проекта 6"
               width="370"
             />
@@ -127,7 +127,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-7.jpg"
+              src="./images/images.portfolio/img-7.jpg"
               alt="Пример Проекта 7"
               width="370"
             />
@@ -136,7 +136,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-8.jpg"
+              src="./images/images.portfolio/img-8.jpg"
               alt="Пример Проекта 8"
               width="370"
             />
@@ -145,7 +145,7 @@
           </li>
           <li class="portfolio-item">
             <img
-              src="./images.portfolio/img-9.jpg"
+              src="./images/images.portfolio/img-9.jpg"
               alt="Пример Проекта 9"
               width="370"
             />
