--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
           </ul>
         </nav>
         <div class="contacts">
-          <a href="mailto:info@devstudio.com" class="contacts-link"
-            >info@devstudio.com</a
+          <a href="mailto:info@devstudio.com" class="contacts-link">
+            <svg class="header-icon">
+              <use href="./images/svg/icon/icon.svg#icon-mail"></use>
+            </svg>
+            info@devstudio.com</a
           >
-          <a href="tel:+38 096 111 11 11" class="contacts-link"
-            >+38 096 111 11 11</a
+          <a href="tel:+38 096 111 11 11" class="contacts-link">
+            <svg class="header-icon">
+              <use href="./images/svg/icon/icon.svg#icon-phone"></use>
+            </svg>
+            +38 096 111 11 11</a
           >
         </div>
       </div>
@@ -62,28 +68,46 @@
         <div class="container features">
           <h2 class="hide-text">Особенности</h2>
           <ul class="features-list">
-            <li>
+            <li class="features-list-item">
+              <svg class="features-icon">
+                <use
+                  href="./images/svg/features/fetures.svg#icon-Anthena"
+                ></use>
+              </svg>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
+              <svg class="features-icon">
+                <use href="./images/svg/features/fetures.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
+              <svg class="features-icon">
+                <use
+                  href="./images/svg/features/fetures.svg#icon-diagram"
+                ></use>
+              </svg>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
+              <svg class="features-icon">
+                <use
+                  href="./images/svg/features/fetures.svg#icon-astronaut"
+                ></use>
+              </svg>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -136,6 +160,44 @@
               <div class="our-team-block">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p>Product Designer</p>
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-inst"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-twit"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-fb"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-in"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -147,6 +209,44 @@
               <div class="our-team-block">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p>Frontend Developer</p>
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-inst"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-twit"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-fb"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-in"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -158,6 +258,44 @@
               <div class="our-team-block">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p>Marketing</p>
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-inst"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-twit"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-fb"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-in"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -169,12 +307,91 @@
               <div class="our-team-block">
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p>Designer</p>
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-inst"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-twit"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-fb"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <svg class="social__icon" width="20" height="20">
+                        <use
+                          href="./images/svg/socials/socials.svg#icon-in"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <!-- Clients -->
+
+      <section class="clients">
+        <div class="container">
+          <h2 class="section-name">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-1"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-2"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-3"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-4"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-5"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/svg/clients/clients.svg#icon-logo-6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
@@ -203,6 +420,39 @@
             </li>
           </ul>
         </address>
+        <div class="icon-footer">
+          <h2 class="icon-welcome">Присоединяйтесь</h2>
+          <ul class="social">
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/svg/socials/socials.svg#icon-inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/svg/socials/socials.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/svg/socials/socials.svg#icon-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="20" height="20">
+                  <use href="./images/svg/socials/socials.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
