added all the svg's and finished hw

--- a/index.html
+++ b/index.html
@@ -395,63 +395,87 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <address>
-          <ul>
-            <li>
-              <a href="" class="footer-address"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-              <br />
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-contacts"
-                >info@devstudio.com</a
-              >
-              <br />
-            </li>
-            <li>
-              <a href="tel:+38 096 111 11 11" class="footer-contacts"
-                >+38 096 111 11 11</a
-              >
-              <br />
-            </li>
-          </ul>
-        </address>
-        <div class="icon-footer">
-          <h2 class="icon-welcome">Присоединяйтесь</h2>
-          <ul class="social">
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/svg/socials/socials.svg#icon-inst"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/svg/socials/socials.svg#icon-twit"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/svg/socials/socials.svg#icon-fb"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/svg/socials/socials.svg#icon-in"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer__insider">
+          <div class="footer-addresses">
+            <a href="./index.html" class="logo"
+              >Web<span class="logo-footer">Studio</span></a
+            >
+            <address>
+              <ul>
+                <li>
+                  <a href="" class="footer-address"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                  <br />
+                </li>
+                <li>
+                  <a href="mailto:info@devstudio.com" class="footer-contacts"
+                    >info@devstudio.com</a
+                  >
+                  <br />
+                </li>
+                <li>
+                  <a href="tel:+38 096 111 11 11" class="footer-contacts"
+                    >+38 096 111 11 11</a
+                  >
+                  <br />
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-socials">
+            <p class="footer-social-text">Присоединяйтесь</p>
+            <ul class="social">
+              <li class="social__item social__item--footer">
+                <a class="social__link social__link--footer" href="#">
+                  <svg
+                    class="social__icon social__icon--footer"
+                    width="20"
+                    height="20"
+                  >
+                    <use
+                      href="./images/svg/socials/socials.svg#icon-inst"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item social__item--footer">
+                <a class="social__link social__link--footer" href="#">
+                  <svg
+                    class="social__icon social__icon--footer"
+                    width="20"
+                    height="20"
+                  >
+                    <use
+                      href="./images/svg/socials/socials.svg#icon-twit"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item social__item--footer">
+                <a class="social__link social__link--footer" href="#">
+                  <svg
+                    class="social__icon social__icon--footer"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/svg/socials/socials.svg#icon-fb"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item social__item--footer">
+                <a class="social__link social__link--footer" href="#">
+                  <svg
+                    class="social__icon social__icon--footer"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./images/svg/socials/socials.svg#icon-in"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
