--- a/portfolio.html
+++ b/portfolio.html
@@ -83,8 +83,10 @@
               alt="Пример Проекта"
               width="370"
             />
-            <h2 class="portfolio-name">Технокряк</h2>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -92,8 +94,10 @@
               alt="Пример Проекта 2"
               width="370"
             />
-            <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -101,8 +105,10 @@
               alt="Пример Проекта 3"
               width="370"
             />
-            <h2 class="portfolio-name">Ресторан Seafood</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Ресторан Seafood</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -110,8 +116,10 @@
               alt="Пример Проекта 4"
               width="370"
             />
-            <h2 class="portfolio-name">Проект Prime</h2>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Проект Prime</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -119,8 +127,10 @@
               alt="Пример Проекта 5"
               width="370"
             />
-            <h2 class="portfolio-name">Проект Boxes</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Проект Boxes</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -128,8 +138,10 @@
               alt="Пример Проекта 6"
               width="370"
             />
-            <h2 class="portfolio-name">Inspiration has no Borders</h2>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -137,8 +149,10 @@
               alt="Пример Проекта 7"
               width="370"
             />
-            <h2 class="portfolio-name">Издание Limited Edition</h2>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Издание Limited Edition</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -146,8 +160,10 @@
               alt="Пример Проекта 8"
               width="370"
             />
-            <h2 class="portfolio-name" 1>Проект LAB</h2>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name" 1>Проект LAB</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="portfolio-item">
             <img
@@ -155,8 +171,10 @@
               alt="Пример Проекта 9"
               width="370"
             />
-            <h2 class="portfolio-name">Growing Business</h2>
-            <p class="portfolio-text">Приложение</p>
+            <div class="portfolio-unit">
+              <h2 class="portfolio-name">Growing Business</h2>
+              <p class="portfolio-text">Приложение</p>
+            </div>
           </li>
         </ul>
       </section>
